# rpi-pico-w-zephyr

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt  prj.conf
app/boards/: rpi_pico_rp2040_w.overlay
app/drivers/bt/: CMakeLists.txt  hci_cyw43_shared_bus.c
app/drivers/bt/zephyr/: module.yml
app/src/: main.c
boards/: rpi_pico_rp2040_w.overlay
docs/: bt_bringup.md  getting-started.md
docs/architecture/: cyw43-shared-bus.md  hw-block-diagram.md  sw-stack.md
docs/pico-sdk-cyw43-delay-root-cause/: 0001-Instrument-CYW43-bring-up-delay-hang.patch  0001-Trace-and-bypass-CYW43-delay-hang.patch  0001-Use-non-scheduling-CYW43-driver-delays.patch  0002-Use-non-scheduling-CYW43-driver-delays.patch  README.md
docs/references/: cyw43-bluetooth.md
drivers/cyw43/bt/: Kconfig  cyw43_bt_firmware.c  hci_cyw43_shared_bus.c
dts/bindings/bluetooth/: infineon,cyw43-bt-hci-shared-bus.yaml
openocd/: picoprobe.cfg
samples/ble_advertiser/: CMakeLists.txt  prj.conf
samples/ble_logger/: CMakeLists.txt  README.md  prj.conf
samples/ble_logger/src/: main.c
samples/ble_scanner/: CMakeLists.txt  prj.conf
samples/ble_scanner/src/: main.c
samples/cli/: CMakeLists.txt  prj.conf
samples/cli/src/: main.c
samples/led_blinky/: CMakeLists.txt  prj.conf
samples/led_blinky/boards/: rpi_pico_rp2040_w.overlay
samples/led_blinky/src/: main.c
scripts/: build.sh  docker-start.sh  elf_map.py  fetch-blobs.sh  flash.sh  init-workspace.sh  memory_report.sh  pico-sdk-bt-debug.sh  serial.sh
